@@ -1399,6 +1399,9 @@ my @encrypted_files =
      ['XI-R6,V5,U=view,O=master', 'master',
       '-print=low', -2052,
       1, 1, 1, 0, 1, 1, 1, 1, 1],
+     ['XI-R6,V5,U=view,O=master', 'master',
+      '-accessibility=n', -4, # -accessibility=n has no effect
+      1, 1, 1, 1, 1, 1, 1, 1, 1],
      ['XI-long-password', 'qwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnm'],
      ['XI-long-password', 'qwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcv'],
     );
@@ -1501,12 +1504,20 @@ foreach my $d (@encrypted_files)
             # password.
             $upass = "";
         }
+        my $accessibility_warning = "";
+        if (($R > 3) && ($eflags =~ /accessibility=n/))
+        {
+            $accessibility_warning =
+                "qpdf: -accessibility=n is ignored" .
+                " for modern encryption formats\n";
+        }
 	$td->runtest("encrypt $file",
 		     {$td->COMMAND =>
 			  "qpdf --static-id --no-original-object-ids -qdf" .
 			  " $eflags $file.enc $file.enc2"},
-		     {$td->STRING => "",
-		      $td->EXIT_STATUS => 0});
+		     {$td->STRING => $accessibility_warning,
+		      $td->EXIT_STATUS => 0},
+                     $td->NORMALIZE_NEWLINES);
 	$td->runtest("check /P",
 		     {$td->COMMAND =>
 			  "qpdf --show-encryption --password=\"$pass\"" .
